--- a/Index.html
+++ b/Index.html
@@ -1,35 +1,42 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="Style.css">
 </head>
+
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" name="" id="" placeholder="Enter City name" spellcheck="false">
+            <input type="text" name="city_name" id="" placeholder="Enter City name" spellcheck="false">
             <button><img src="./images/search.png" alt=""></button>
         </div>
         <div class="weather">
-            <img src="./images/rain.png" alt="" class="weather-icon">
+            <img src="images/clouds.png"class="weather-icon">
             <h1 class="temp">22°c</h1>
             <h2 class="City-name">Bokaro</h2>
         </div>
         <div class="details">
             <div class="humidity">
-                <img src="./images/humidity.png" alt="">
-                <h3>30%</h3>
-                <h4>humidity</h4>
+                <img src="images/humidity.png" alt="">
+                <div class="text">
+                    <h3 id="humid">30%</h3>
+                    <h4>Humidity</h4>
+                </div>
             </div>
             <div class="wind">
-                <img src="./images/wind.png" alt="">
-                <h3>15km/h%</h3>
-                <h4>wind</h4>
+                <img src="images/wind.png" alt="">
+                <div class="text">
+                    <h3 id="wind">15 km/h</h3>
+                    <h4>Wind</h4>
+                </div>
             </div>
         </div>
     </div>
 
-
+    <script src="Script.js"></script>
 </body>
+
 </html>
